k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotst-ingress
  namespace: gotst
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: test.goapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
  - host: users.goapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
